--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <!-- End: search -->
         </div>
 
-        <div id="slider">
+        <div id="slider" style="background: url('./assets/img/Slider/slider2.jpg') top center / cover no-repeat;">
             <div class="text-content">
                 <h2 class="text-heading">Black Pink</h2>
                 <div class="text-description">Vừa hồng vừa đen, vừa đen vừa hồng</div>
